# parquet-to-arrow

./: .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
arrow-patches/: 01-arrow-10033-disable-pre-buffer-thread-pool.diff  01-fix-arrow-6861.diff  01-fix-arrow-6895.diff  02-fix-arrow-6895.diff  fix-arrow-6861.diff
src/: common.cc  common.h  csv-to-arrow.cc  parquet-diff.cc  parquet-to-arrow-slice.cc  parquet-to-arrow.cc  parquet-to-text-stream.cc  range.cc  range.h
tests/: test_csv_to_arrow.py  test_parquet_diff.py  test_parquet_to_arrow.py  test_parquet_to_arrow_slice.py  test_parquet_to_text_stream.py  util.py
tests/files/: column-A-dictionary-from-fastparquet.parquet  column-A-string-with-no-row-groups.parquet
